# Cossin

./: .gitignore  .gitmodules  CMakeLists.txt  Cossin.jucer  README.md  juce  plugin_state_temp7fdaf7b1.xml
Builds/VisualStudio2017/: Cossin.sln  Cossin_AAX.vcxproj  Cossin_SharedCode.vcxproj  Cossin_SharedCode.vcxproj.filters  Cossin_StandalonePlugin.vcxproj  Cossin_VST3.vcxproj  resources.rc
assets/: CMakeLists.txt  default.lang
src/: .directory  AttachmentList.h  CMakeLists.txt  CossinDef.h  CossinMain.cpp  CossinMain.h  EffectModuleGuis.cpp  EffectModuleGuis.h  EffectModules.cpp  EffectModules.h  GuiFrameProcessor.cpp  GuiFrameProcessor.h  MetreLookAndFeel.cpp  MetreLookAndFeel.h  OptionCategories.cpp  OptionCategories.h  OptionPanel.cpp  OptionPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginStyle.cpp  PluginStyle.h  ProcessorContainer.cpp  ProcessorContainer.h  ProcessorPanel.cpp  ProcessorPanel.h  ReloadListener.h  Resources.h  SCLabel.h  SharedData.cpp  SharedData.h  ThemeFolder.cpp  ThemeFolder.h  TopUnitRackGui.cpp  TopUnitRackGui.h  Util.h
src/assets/: colourmap.json  default.lang
